--- a/showeq/trunk/README
+++ b/showeq/trunk/README
@@ -14,6 +14,7 @@ Please read the CHANGES and BUGS files for more information.
 INSTALLATION
 ------------
 See the file 'INSTALL' for installation and configuration information.
+For people new to ShowEQ and to linux see INSTALL.newbies.
 
 RUNNING
 -------
