Added support for 64-bit integers to the XML preference system.  Modified Message Window to use that support.

--- a/showeq/branches/pre_5_0_dev/CHANGES
+++ b/showeq/branches/pre_5_0_dev/CHANGES
@@ -47,6 +47,7 @@ dohpaZ (11/?/03)
 + Got rid of the old MsgDialog classes
 + Made the right-click menus of SEQWindow derived windows come up in a
   more consistent fashion.
++ Added support for storing 64 bit integers to the XML preference system.
 
 dohpaZ (10/24/03)
 ---------------------
