--- a/showeq/branches/pre_5_0_dev/CHANGES
+++ b/showeq/branches/pre_5_0_dev/CHANGES
@@ -1,6 +1,6 @@
 Version: $Id$ $Name$
 
-dohpaZ (11/?/03)
+dohpaZ (12/5/03)
 ---------------------
 + Updated version to 4.9.99.1
 + OPCode and structure fixes for 11/05/03 patch.
@@ -8,6 +8,27 @@ dohpaZ (11/?/03)
 + Added zone safepoint support to ZoneMgr
 + Some dependency cleanups.
 + Fix to support people running EQ under winex.
++ Support multiple user configurable icons (for spawns, pc's, items, etc...)
++ Support rescaling the Z for a whole map to allow migration of old/borked 
+  maps.
++ Added minimal support for importing maps (warning, this imports everything,
+  so if not importing other SOE layers you will probably end up with duplicate
+  lines, points, etc...).
++ Support for direct loading of SOE txt format map files.
++ Slight improvement in map loading speeds.
++ Added zone point destination information to map tooltip for teleport doors.
++ New message storage.
++ New message filtering system.
++ Entirely new message window, with greatly enhanced functionality.
++ Got rid of the old MsgDialog classes
++ Move terminal UI to its own class
++ Added diagnostic message functions to unify how certain messages were 
+  being handled.  The message output is now included with the rest of the 
+  text messages.
++ Moved eqstr_{}.txt handling to its own class.
++ Added Proper seperation of user data from distributed program data.
+ + Support .showeq directory
+ + Moved maps, filters, spawnpoints, and logs to their own subdirectories.
 + Switch to using QRegExp for filter pattern matching.
 + Major cleanup/revamp of Filter handling (stage 1), filters are now stored in 
   their own sub-directories, and now uses an XML format.
@@ -16,44 +37,31 @@ dohpaZ (11/?/03)
 + Fixed the duplicate accelerator bug.  Shift+F3 is now "Reload Zone Filters",
   and Shift+F4 is now "Save Zone Filters".  Also fixed a bug that was causing
   the zone specific filters not to be used.
++ Assorted changes/fixes to experience handling in the Player object. No more
+  bizarre out of range values.
++ Improved behaviour when swapping players.
++ Modifed default player characteristic handling.  Made the code more 
+  responsive to configuration changes.
++ Assorted experience window fixes, including the use of the ZEM that the
+  zonemgr gets from the zone packets.
 + More major cleanup of packet handling (stage 2).  Migrated opcode,implicitlen
   and dispatch handling to an XML based system (see worldopcodes.xml and
   zoneopcodes.xml).
 + Modified logging of decoded world/zone packets to include which 
   packet in the opcode DB they matched, when the entry was updated, 
   and information about the type that is supposed to be in the payload.
-+ Fixed the spawn logger to log the adjusted x/y/z values for zone/new spawns..
-+ Slight improvement in map loading speeds.
 + Migrated SEQWindow to be based off of QDockWindow so that all classes 
   derived from it could take advantage of Qt's native dockable window support.
-+ Integrated patch# 832080 "freebsd-stable compile 10/24/03" from jonseq
-+ Added Proper seperation of user data from distributed program data.
- + Support .showeq directory
- + Moved maps, filters, spawnpoints, and logs to their own subdirectories.
-+ zones.h, changed 162 to be ssratemple and 182 to be nedaria, thanks to 
-  darkgrue and uRit1u2CBBA= respectively.
-+ Initial support for direct loading of SOE txt format map files.
-+ Added minimal support for importing maps (warning, this imports everything,
-  so if not importing other SOE layers you will probably end up with duplicate
-  lines, points, etc...).
-+ Moved eqstr_{}.txt handling to its own class.
-+ Integrated patch# 844078 "Fix to class displays" by belith (UnGod).
-+ Support rescaling the Z for a whole map to allow migration of old/borked 
-  maps.
-+ Assorted changes/fixes to experience handling in the Player object.
-+ Improved behaviour when swapping players.
-+ New message storage, filtering, and UI.
-+ Move terminal UI to its own class
-+ Got rid of the old MsgDialog classes
 + Made the right-click menus of SEQWindow derived windows come up in a
   more consistent fashion.
-+ Added support for storing 64 bit integers to the XML preference system.
-+ Added diagnostic message functions to unify how certain messages were 
-  being handled.
-+ Found zonePoint in doorStruct.  Added zone point destination information 
-  to map tooltip for teleport doors.
-+ Modifed default player characteristic handling.  Made the code more 
-  responsive to configuration changes.
++ Added support for storing 64 bit integers, QPens, and QBrushes to the 
+  XML preference system.
++ Fixed the spawn logger to log the adjusted x/y/z values for zone/new spawns..
++ Found zonePoint in doorStruct.  
++ zones.h, changed 162 to be ssratemple and 182 to be nedaria, thanks to 
+  darkgrue and uRit1u2CBBA= respectively.
++ Integrated patch# 832080 "freebsd-stable compile 10/24/03" from jonseq
++ Integrated patch# 844078 "Fix to class displays" by belith (UnGod).
 
 dohpaZ (10/24/03)
 ---------------------
