--- a/showeq/branches/pre_5_0_dev/CHANGES
+++ b/showeq/branches/pre_5_0_dev/CHANGES
@@ -37,6 +37,9 @@ dohpaZ (12/5/03)
 + Fixed the duplicate accelerator bug.  Shift+F3 is now "Reload Zone Filters",
   and Shift+F4 is now "Save Zone Filters".  Also fixed a bug that was causing
   the zone specific filters not to be used.
++ Moved filter notification handling out of EQInterface and into its own class.
+  "Use Spawn Audio" has been split into "Use System Beep" and "Use Command"
+  in the process to create more flexibility.
 + Assorted changes/fixes to experience handling in the Player object. No more
   bizarre out of range values.
 + Improved behaviour when swapping players.
@@ -63,6 +66,9 @@ dohpaZ (12/5/03)
   darkgrue and uRit1u2CBBA= respectively.
 + Integrated patch# 832080 "freebsd-stable compile 10/24/03" from jonseq
 + Integrated patch# 844078 "Fix to class displays" by belith (UnGod).
++ Integrated patch# 851037 "New map for Mistmoore" by showeqfan & Boredmapper
++ Integrated patch# 850894 "Map for Cabilis West" by showeqfan
++ Added mir{a-j], mmc[a-j], and ruj[a-j] LDoN maps.
 
 dohpaZ (10/24/03)
 ---------------------
