--- a/showeq/branches/pre_5_0_dev/CHANGES
+++ b/showeq/branches/pre_5_0_dev/CHANGES
@@ -1,6 +1,6 @@
 Version: $Id$ $Name$
 
-dohpaZ (01/?/04)
+dohpaZ (01/18/04)
 ---------------------
 + Updated version to 5.0.0.4
 + More updates to work with 12/19/03 EQLive 
