--- a/showeq/branches/pre_5_0_beta/CHANGES
+++ b/showeq/branches/pre_5_0_beta/CHANGES
@@ -1,6 +1,6 @@
 Version: $Id$ $Name$
 
-dohpaZ (02/?/04)
+dohpaZ (02/11/04)
 ---------------------
 + Updated version to 5.0.0.5
 + Updated to work with 02/10/04 EQLive
