--- a/showeq/branches/pre_5_0_dev/CHANGES
+++ b/showeq/branches/pre_5_0_dev/CHANGES
@@ -1,11 +1,12 @@
 Version: $Id$ $Name$
 
-dohpaZ (02/?/04)
+dohpaZ (02/11/04)
 ---------------------
 + Updated version to 5.0.0.5
 + Updated to work with 02/10/04 EQLive
 + Added Beserker class
 + Added Gate of Discord (GoD) maps.
++ Integrated patch #893070 "Races Update (GoD)" by curioseq
 + Minor fix to guild member list online member count tracking.
 + Make sure to cleanup guild list/shell when shutting down
 + Added special map icon for zone doors.
