--- a/showeq/branches/pre_5_0_dev/CHANGES
+++ b/showeq/branches/pre_5_0_dev/CHANGES
@@ -1,5 +1,10 @@
 Version: $Id$ $Name$
 
+dohpaZ (02/14/04)
+---------------------
++ Patch to fix QCursor issue.
++ More updates to work with 02/10/04 EQLive
+
 dohpaZ (02/11/04)
 ---------------------
 + Updated version to 5.0.0.5
