--- a/showeq/branches/pre_5_0_beta/CHANGES
+++ b/showeq/branches/pre_5_0_beta/CHANGES
@@ -1,5 +1,10 @@
 Version: $Id$ $Name$
 
+BonkersBobcat (05/27/04)
+------------------------
++ Updated version to 5.0.0.9
++ Updated to work with 05/26/04 EQLive (ksmith's patches)
+
 BonkersBobcat (05/06/04)
 ------------------------
 + Updated version to 5.0.0.8
