--- a/showeq/branches/pre_5_0_beta/CHANGES
+++ b/showeq/branches/pre_5_0_beta/CHANGES
@@ -1,6 +1,11 @@
 Version: $Id$ $Name$
 
-BonkersBobcat (05/06/09)
+BonkersBobcat (07/14/04)
+------------------------
++ Updated version to 5.0.0.11
++ Applied UnGod's patches to work with 07/14/04 version
+
+BonkersBobcat (06/09/04)
 ------------------------
 + Updated version to 5.0.0.10
 + Updated zoneopcodes.xml to kmsith's latest version
