Tweak AMD64 build to work under Suse 9.2

--- a/showeq/branches/pre_v5_0_dev2/ChangeLog
+++ b/showeq/branches/pre_v5_0_dev2/ChangeLog
@@ -3,6 +3,7 @@ Version: $Id$ $Name$
 dohpaZ (11/7/04)
 ------------------------
 + Updated version to 5.0.0.16
++ Tweaked acinclude.m4 to improve x86_64 behaviour.
 
 dohpaZ (11/6/04)
 ------------------------
