Allow 0-size OP_ManaChange so bards don't see size type mismatch errors all the time. This only happens Client->Server.

--- a/showeq/branches/pre_5_0_beta/ChangeLog
+++ b/showeq/branches/pre_5_0_beta/ChangeLog
@@ -5,6 +5,7 @@ purple (05/11/05)
 + Added some session-related opcodes to worldopcodes.xml
 + Fixed opcodes for alt exp and hooked altExpUpdateStruct so alt exp updating
 	maps properly
++ Made is so OP_ManaChange can be 0 size. Bards have this a lot.
 
 dophaZ (04/17/05)
 -----------------------
