Guilds numbered above 512 weren't showing up in spawn list and on the map. Fixed two hardcoded 512's to be MAX_GUILDS (also changed MAXGUILDS to be MAX_GUILDS to be consistent with other MAX_ things).

--- a/showeq/branches/pre_5_0_beta/ChangeLog
+++ b/showeq/branches/pre_5_0_beta/ChangeLog
@@ -6,6 +6,7 @@ purple (05/11/05)
 + Fixed opcodes for alt exp and hooked altExpUpdateStruct so alt exp updating
 	maps properly
 + Made is so OP_ManaChange can be 0 size. Bards have this a lot.
++ Fix problems with guilds numbered higher than 512
 
 dophaZ (04/17/05)
 -----------------------
