Valgrind cleanup. Made experience log treat it's exp list records properly and made sure m_exp_log is initialized in the constructor always. Also changed to use QPtrList since QList is deprecated.
Made spells.cpp properly call clear() which deletes the spells properly instead
of calling clearSpells (which is the signal when spells are cleared).

Made spawn.cpp initialize all spawn fields in all constructors.

Made xmlprefernces delete the sections when it is destructed.

Made spellshell not clobber spells if they are referenced twice.

--- a/showeq/branches/pre_5_0_beta/ChangeLog
+++ b/showeq/branches/pre_5_0_beta/ChangeLog
@@ -10,6 +10,7 @@ purple (05/11/05)
 + Added unknown world data to the unknown log
 + Fixed the skills window to properly show skills > 252
 + Show strings in the spawnlist as utf8 properly
++ Valgrind cleanup for some uninitialized references and minor memory leaks
 
 dophaZ (04/17/05)
 -----------------------
